fix(build): adjusted build

--- a/src/locales/pt/obj_projects.json
+++ b/src/locales/pt/obj_projects.json
@@ -15,7 +15,7 @@
       "longDescriptionTitle": "Visão geral do projeto",
       "longDescription": [
         "Bem-vindo ao meu portfólio. Este projeto foi pensado como vitrine das minhas habilidades, experiências e trabalhos ao longo da carreira. Aqui você encontra uma coleção do meu trabalho, com foco nas competências e na dedicação que trago a cada projeto.",
-        "O design foi inspirado nos princípios de usabilidade e mobile first, garantindo uma navegação o mais intuitiva possível, para que cada seção seja explorada com facilidade e se tenha uma visão completa dos meus trabalhos e de quem sou."
+        "O design foi inspirado nos princípios de usabilidade e mobile first, garantindo uma navegação o mais intuitiva possível, para que cada seção seja explorada com facilidade e se tenha uma visão completa dos meus trabalhos e de quem sou.",
         "Além disso, este projeto também serve como meu laboratório de testes, onde implemento novas bibliotecas e tecnologias antes de utilizá-las em projetos reais. Isso me permite estar sempre atualizado com as últimas tecnologias do mercado e garantir a qualidade e eficiência em meus trabalhos."
       ],
 
