feat(site): adjusted texts, seo, compontents and pages

--- a/src/locales/en/obj_about.json
+++ b/src/locales/en/obj_about.json
@@ -6,7 +6,7 @@
     "begin": "Nice to meet you! My name is Felipe Frantz Zanini, a software engineer passionate about jiu-jitsu, running, indie game development, Dota 2, screenwriting, pixel art, music, and investments. I am 31 years old and live in Pelotas, Rio Grande do Sul, Brazil.",
     "middle": "My journey in software development began in 2008, during technical school. In 2010, after completing the course, I started my first programming internship and have never stopped learning and evolving since. Upon being hired as a software engineer, I have taken part in more than <b>50 projects</b>, using various technologies, with an emphasis on PHP.",
     "education": "Passionate about the field and always seeking to improve, I completed a Bachelor’s Degree in IT Management and a Specialization in IT Management. I have also begun a Master’s in Computer Science.",
-    "end": "I currently work as a Senior Software Engineer and Tech Lead specializing in frontend development at <b><a href=\"https://www.nav9.tech\" target=\"_blank\">nav9</a></b>, where I have the privilege of being a technology partner to companies such as <b>Shoppings Iguatemi</b>, <b>UFC Fantasy</b>, <b>EducaCross</b>, <b>Grupo SEB</b>, <b>Rede AZ</b>, and <b>Vittude</b>, helping them build the best product solutions for the web."
+    "end": "I currently work as a Senior Software Engineer at <b><a href=\"https://www.iguatemi.com.br\" target=\"_blank\">Iguatemi S.A</b></a>, where I contribute to the development of innovative technological solutions that transform the digital experience for customers."
   },
   "skills": {
     "title": "From imagination to impact",
