--- a/src/locales/es/obj_about.json
+++ b/src/locales/es/obj_about.json
@@ -6,7 +6,7 @@
     "begin": "Mucho gusto. Mi nombre es Felipe Frantz Zanini, ingeniero de software apasionado por el jiu-jitsu, el running, el desarrollo de juegos independientes, Dota 2, los guiones, el pixel art, la música y las inversiones. Tengo 31 años y vivo en Pelotas, Rio Grande do Sul, Brasil.",
     "middle": "Mi camino en el desarrollo de software comenzó en 2008, durante la escuela técnica. En 2010, tras completar el curso, inicié mi primera pasantía en programación y, desde entonces, nunca he dejado de estudiar y evolucionar. Al ser contratado como ingeniero de software, he participado en más de <b>50 proyectos</b>, usando diversas tecnologías, con énfasis en PHP.",
     "education": "Apasionado por el área y en constante búsqueda de mejora, obtuve la Licenciatura en Gestión de TI y la Especialización en Gestión de TI. También inicié la Maestría en Ciencias de la Computación.",
-    "end": "Soy Ingeniero de Software Senior y Tech Lead especializado en desarrollo frontend en <b><a href=\"https://www.nav9.tech\" target=\"_blank\">nav9</a></b>, donde tengo el privilegio de ser socio tecnológico de empresas como <b>Shoppings Iguatemi</b>, <b>UFC Fantasy</b>, <b>EducaCross</b>, <b>Grupo SEB</b>, <b>Rede AZ</b> y <b>Vittude</b>, ayudándolas a crear las mejores soluciones de productos para la web."
+    "end": "Actualmente soy Ingeniero de Software Senior en <b><a href=\"https://www.iguatemi.com.br\" target=\"_blank\">Iguatemi S.A</b></a>, donde contribuyo al desarrollo de soluciones tecnológicas innovadoras que transforman la experiencia digital de los clientes."
   },
   "skills": {
     "title": "De la imaginación al impacto",
