--- a/src/locales/pt/obj_home.json
+++ b/src/locales/pt/obj_home.json
@@ -7,10 +7,10 @@
     "Desenvolvedor de Jogos Indie",
     "Faixa Marrom de Jiu-Jitsu"
   ],
-  "description": "Atualmente sou Engenheiro de Software Sênior e Tech Lead na <b><a href=\"https://www.nav9.tech\" target=\"_blank\">nav9</a></b>, com foco em frontend, atuando como parceiro de tecnologia na construção da próxima geração de aplicações web. No tempo livre, sou instrutor na <b><a href=\"https://www.indiobjj.com.br\" target=\"_blank\">JA Jiu Jitsu — Pelotas</a></b>.",
+  "description": "Atualmente sou Engenheiro de Software Sênior na <b><a href=\"https://www.iguatemi.com.br\" target=\"_blank\">Iguatemi S.A</b></a>, onde contribuo para o desenvolvimento de soluções tecnológicas inovadoras. No tempo livre, sou instrutor na <b><a href=\"https://www.indiobjj.com.br\" target=\"_blank\">JA Jiu Jitsu — Pelotas</a></b>.",
   "location": "Pelotas — RS, Brasil",
   "experience": "+10 anos de experiência",
-  "projects": "+50 projetos desenvolvidos",
+  "projects": "+90 projetos desenvolvidos",
   "stack": "Stack principal",
   "textButtonAbout": "Saiba mais sobre mim",
   "textButtonResume": "Acessar meu currículo",
