--- a/src/locales/en/obj_home.json
+++ b/src/locales/en/obj_home.json
@@ -7,7 +7,7 @@
     "Indie Game Developer",
     "Jiu-Jitsu Brown Belt"
   ],
-  "description": "I am a Senior Software Engineer and Tech Lead at <b><a href=\"https://www.nav9.tech\" target=\"_blank\">nav9</a></b>, focused on frontend and working as a technology partner to build the next generation of web applications. In my free time, I am an instructor at <b><a href=\"https://www.indiobjj.com.br\" target=\"_blank\">JA Jiu Jitsu — Pelotas</a></b>.",
+  "description": "I am currently a Senior Software Engineer at <b><a href=\"https://www.iguatemi.com.br\" target=\"_blank\">Iguatemi S.A</b></a>, where I contribute to the development of innovative technological solutions. In my free time, I am an instructor at <b><a href=\"https://www.indiobjj.com.br\" target=\"_blank\">JA Jiu Jitsu — Pelotas</a></b>.",
   "location": "Pelotas — RS, Brazil",
   "experience": "+10 years of experience",
   "projects": "+50 projects delivered",
