--- a/src/locales/es/obj_home.json
+++ b/src/locales/es/obj_home.json
@@ -7,7 +7,7 @@
     "Desarrollador de Juegos Indie",
     "Cinturón Marrón de Jiu-Jitsu"
   ],
-  "description": "Soy Ingeniero de Software Senior y Tech Lead en <b><a href=\"https://www.nav9.tech\" target=\"_blank\">nav9</a></b>, centrado en frontend y trabajando como socio tecnológico en la construcción de la próxima generación de aplicaciones web. En mi tiempo libre soy instructor en <b><a href=\"https://www.indiobjj.com.br\" target=\"_blank\">JA Jiu Jitsu — Pelotas</a></b>.",
+  "description": "Actualmente soy Ingeniero de Software Senior en <b><a href=\"https://www.iguatemi.com.br\" target=\"_blank\">Iguatemi S.A</b></a>, donde contribuyo al desarrollo de soluciones tecnológicas innovadoras. En mi tiempo libre soy instructor en <b><a href=\"https://www.indiobjj.com.br\" target=\"_blank\">JA Jiu Jitsu — Pelotas</a></b>.",
   "location": "Pelotas — RS, Brasil",
   "experience": "+10 años de experiencia",
   "projects": "+50 proyectos desarrollados",
