--- a/src/locales/pt/obj_home.json
+++ b/src/locales/pt/obj_home.json
@@ -2,12 +2,12 @@
   "welcome": "Bem-vindo! Prazer em conhecê-lo.",
   "name": "Sou o Felipe",
   "roles": [
-    "Engenheiro de Software",
+    "Engenheiro de Software Sênior",
     "Escritor e Roteirista",
     "Desenvolvedor de Jogos Indie",
     "Faixa Marrom de Jiu-Jitsu"
   ],
-  "description": "Atualmente sou Engenheiro de Software Sênior na <b><a href=\"https://www.iguatemi.com.br\" target=\"_blank\">Iguatemi S.A</b></a>, onde contribuo para o desenvolvimento de soluções tecnológicas inovadoras. No tempo livre, sou instrutor na <b><a href=\"https://www.indiobjj.com.br\" target=\"_blank\">JA Jiu Jitsu — Pelotas</a></b>.",
+  "description": "Atualmente sou Engenheiro de Software Sênior & Arquiteto de Frontend na <b><a href=\"https://www.iguatemi.com.br\" target=\"_blank\">Iguatemi S.A</b></a>, onde contribuo para o desenvolvimento de soluções tecnológicas inovadoras. No tempo livre, sou instrutor na <b><a href=\"https://www.indiobjj.com.br\" target=\"_blank\">JA Jiu Jitsu — Pelotas</a></b>.",
   "location": "Pelotas — RS, Brasil",
   "experience": "+10 anos de experiência",
   "projects": "+90 projetos desenvolvidos",
